--- a/settings.gradle
+++ b/settings.gradle
@@ -7,12 +7,14 @@ pluginManagement {
 }
 
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
     repositories {
         google()
         mavenCentral()
         maven { url "https://jitpack.io" }
+        gradlePluginPortal()
     }
 }
+
 rootProject.name = "SpMp"
 include ':app'
