--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,19 +62,33 @@ android {
             manifestPlaceholders["appName"] = "SpMp"
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
+
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
+            universalApk true
+        }
+    }
+
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_11.toString()
     }
+
     buildFeatures {
         compose true
     }
+
     composeOptions {
         kotlinCompilerExtensionVersion "1.3.0"
     }
+
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
@@ -109,4 +123,7 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:2.18.1'
     implementation 'com.google.android.exoplayer:extension-mediasession:2.18.1'
     implementation 'androidx.palette:palette:1.0.0'
+    implementation "com.github.krottv:compose-sliders:0.1.4"
+    implementation 'com.github.yausername.youtubedl-android:library:3a0252d'
+    implementation 'com.google.code.gson:gson:2.9.1'
 }
