--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,5 +125,6 @@ dependencies {
     implementation 'com.google.android.exoplayer:extension-mediasession:2.18.1'
     implementation 'androidx.palette:palette:1.0.0'
     implementation "com.github.krottv:compose-sliders:0.1.4"
+    implementation "org.burnoutcrew.composereorderable:reorderable:0.9.2"
 //    implementation 'com.github.spectreseven1138:android-compose-furigana:1.0.0'
 }
