--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,10 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+
+    lintOptions {
+        disable 'ByteOrderMark'
+    }
 }
 
 configurations.all {
