--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
@@ -27,6 +28,7 @@
         </activity>
 
         <service android:name=".PlayerHost$PlayerService"
+            android:process=":service"
             android:exported="true"
             android:foregroundServiceType="mediaPlayback">
             <intent-filter>
