--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
             pip {
                 install "ytmusicapi"
                 install "pykakasi"
+                install "yt-dlp"
             }
         }
 
@@ -178,9 +179,7 @@ dependencies {
     implementation 'androidx.palette:palette:1.0.0'
     implementation "com.github.krottv:compose-sliders:0.1.4"
     implementation "org.burnoutcrew.composereorderable:reorderable:0.9.2"
-
-    // implementation igo()
-    implementation "com.github.sile:gomoku:v0.0.7"
+    implementation igo()
 
 //    implementation 'com.github.spectreseven1138:android-compose-furigana:1.0.0'
 }
