--- a/app/build.gradle
+++ b/app/build.gradle
@@ -180,6 +180,8 @@ dependencies {
     implementation "com.github.krottv:compose-sliders:0.1.4"
     implementation "org.burnoutcrew.composereorderable:reorderable:0.9.2"
 
+    implementation files("../../ptl/lib/build/libs/ptl.jar")
+
     // implementation igo()
     // implementation 'com.github.spectreseven1138:android-compose-furigana:1.0.0'
 }
