--- a/app/build.gradle
+++ b/app/build.gradle
@@ -180,7 +180,9 @@ dependencies {
     implementation "com.github.krottv:compose-sliders:0.1.4"
     implementation "org.burnoutcrew.composereorderable:reorderable:0.9.2"
 
+    // Ptl
     implementation files("../../ptl/lib/build/libs/ptl.jar")
+    implementation 'org.jsoup:jsoup:1.15.3'
 
     // implementation igo()
     // implementation 'com.github.spectreseven1138:android-compose-furigana:1.0.0'
