--- a/app/build.gradle
+++ b/app/build.gradle
@@ -179,6 +179,7 @@ dependencies {
     implementation 'androidx.palette:palette:1.0.0'
     implementation "com.github.krottv:compose-sliders:0.1.4"
     implementation "org.burnoutcrew.composereorderable:reorderable:0.9.2"
+    implementation 'com.github.alorma:compose-settings-ui:0.11.0'
 
     // Ptl
     implementation files("../../ptl/lib/build/libs/ptl.jar")
