--- a/app/build.gradle
+++ b/app/build.gradle
@@ -167,6 +167,7 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
 
     implementation "io.coil-kt:coil-compose:2.0.0-rc01"
@@ -179,7 +180,6 @@ dependencies {
     implementation 'androidx.palette:palette:1.0.0'
     implementation "com.github.krottv:compose-sliders:0.1.4"
     implementation "org.burnoutcrew.composereorderable:reorderable:0.9.2"
-    implementation 'com.github.alorma:compose-settings-ui:0.11.0'
 
     // Ptl
     implementation files("../../ptl/lib/build/libs/ptl.jar")
