--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,19 +20,9 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
-    - name: Create Ptl directory (temp)
-      run: mkdir -p /home/runner/work/spmp/ptl/lib/build/libs
-    - name: Get Ptl (temp)
-      uses: robinraju/release-downloader@v1.6
-      with:
-        repository: spectreseven1138/ptl
-        latest: true
-        fileName: ptl.jar
-        out-file-path: /home/runner/work/spmp/ptl/lib/build/libs
-        token: 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
-    - name: Print tree
-      run: tree
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew     
-    - name: Build with Gradle
-      run: ./gradlew build
+    # - name: Build with Gradle
+    #   run: ./gradlew build
+    - name: Get gradle tasks
+      run: ./gradlew tasks
