--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,11 +22,11 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew     
-    # - name: Build with Gradle
-    #   run: ./gradlew build
-    - name: Get gradle tasks
-      run: ./gradlew tasks
-
+    - name: A
+      run: ./gradlew signingReport
+    - name: Build with Gradle
+      run: ./gradlew build
+      
     # - name: Upload APK artifact
     #   uses: actions/upload-artifact@v3.1.1
     #   with:
