--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,9 +21,6 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-
     - name: Get keystore
       env:
         ENCODED_KEYSTORE: ${{ secrets.ANDROID_KEYSTORE }}
@@ -33,8 +30,11 @@ jobs:
         echo $ENCODED_KEYSTORE | base64 -di > $HOME/.android/keystore.jks
         echo $PROPERTIES > $HOME/.android/keystore.properties
 
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
     - name: Build with Gradle
-      run: ./gradlew assembleRelease
+      run: ./gradlew build
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v3.1.1
