--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,15 +6,30 @@ plugins {
 
 def keystorePropertiesFile = file("${System.properties['user.home']}${File.separator}.android${File.separator}keystore.properties")
 def keystoreProperties = new Properties()
-keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
 
 android {
     signingConfigs {
         main {
             storeFile file("${System.properties['user.home']}${File.separator}.android${File.separator}keystore.jks")
+
+            keyAlias "default"
+
             storePassword keystoreProperties["storePassword"]
             keyAlias keystoreProperties["keyAlias"]
             keyPassword keystoreProperties["keyPassword"]
+
+            if (System.getenv("SIGNING_STORE_PASSWORD") != null) {
+                storePassword System.getenv("SIGNING_STORE_PASSWORD")
+            }
+            if (System.getenv("SIGNING_KEY_ALIAS") != null) {
+                keyAlias System.getenv("SIGNING_KEY_ALIAS")
+            }
+            if (System.getenv("SIGNING_KEY_PASSWORD") != null) {
+                keyPassword System.getenv("SIGNING_KEY_PASSWORD")
+            }
         }
     }
     compileSdk 32
