--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         destination_path: "$HOME/.android/"
         filename: "keystore.jks"
-        secret: "ANDROID_KEYSTORE"
+        secret: ${{ secrets.ANDROID_KEYSTORE }}
     
     - name: A
       run: tree $HOME
