--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,19 +21,14 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
-    - name: Prepare .android directory
-      run: mkdir -p $HOME/.android
+    #- name: Prepare .android directory
+    #  run: mkdir -p $HOME/.android
     
     - name: Get keystore
-      uses: davidSchuppa/base64Secret-toFile-action@v2
-      with:
-        destination-path: "$HOME/.android/"
-        filename: "keystore.jks"
-        secret: ${{ secrets.ANDROID_KEYSTORE }}
-    
-    - name: A
-      run: tree $HOME
-
+      run: |
+        echo "${{ secrets.ANDROID_KEYSTORE }}" > $HOME/.android/keystore.jks.asc
+        gpg -d --passphrase "${{ secrets.ANDROID_KEYSTORE_PASSWORD }}" --batch $HOME/.android/keystore.jks.asc > $HOME/.android/keystore.jks
+      
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
