--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -27,8 +27,7 @@ jobs:
     - name: Get keystore
       run: |
         mkdir -p $HOME/.android
-        echo "${{ secrets.ANDROID_KEYSTORE }}" > $HOME/.android/keystore.jks.asc
-        gpg -d --passphrase "${{ secrets.ANDROID_KEYSTORE_PASSWORD }}" --batch $HOME/.android/keystore.jks.asc > $HOME/.android/keystore.jks
+        echo "${{ secrets.ANDROID_KEYSTORE }}" | base64 -d > $HOME/.android/keystore.jks
       
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
