--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -33,7 +33,9 @@ jobs:
       run: chmod +x gradlew
 
     - name: Build with Gradle
-      run: ./gradlew build
+      run: |
+        ./gradlew signingReport
+        ./gradlew assembleDebug
       env:
         SIGNING_KEY_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
         SIGNING_STORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
