--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,19 +7,20 @@ plugins {
 android {
     signingConfigs {
         debug {
-            storeFile file('/home/spectre7/.android/keystore.jks')
-            storePassword 'passwd'
-            keyAlias 'alias'
-            keyPassword 'passwd'
+            storeFile file("debug.keystore")
+            storePassword "passwd"
+            keyAlias "default"
+            keyPassword "passwd"
         }
-        release {
-            storeFile file('/home/spectre7/.android/keystore.jks')
-            storePassword 'passwd'
-            keyAlias 'alias'
-            keyPassword 'passwd'
-        }
+        // release {
+        //     storeFile
+        //     storePassword
+        //     keyAlias
+        //     keyPassword
+        // }
     }
-    compileSdk 32
+
+    compileSdkVersion 32
 
     defaultConfig {
         applicationId "com.spectre7.spmp"
@@ -51,17 +52,14 @@ android {
         debug {
             applicationIdSuffix = ".debug"
             manifestPlaceholders["appName"] = "SpMp (debug)"
-
-//            minifyEnabled true
-//            shrinkResources true
-//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
         release {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             manifestPlaceholders["appName"] = "SpMp"
-            signingConfig signingConfigs.release
+            signingConfig signingConfigs.debug
         }
     }
 
@@ -127,34 +125,6 @@ def download = { source, dest ->
     return file
 }
 
-// def igo = {
-
-//     File jar = download("https://osdn.net/frs/redir.php?m=nchc&f=igo%2F55029%2Figo-0.4.5.jar", "$buildDir/igo/igo.jar")
-//     File dict = download("https://altushost-swe.dl.sourceforge.net/project/mecab/mecab-ipadic/2.7.0-20070801/mecab-ipadic-2.7.0-20070801.tar.gz", "$buildDir/igo/dict.tar.gz")
-
-//     copy {
-//         from tarTree(resources.gzip(dict.absolutePath))
-//         into jar.parentFile
-//     }
-
-//     File compiled_dict = new File("$buildDir/igo/assets/ipadic")
-//     compiled_dict.parentFile.mkdirs()
-
-//     if (!compiled_dict.exists()) {
-//         javaexec {
-//             main="net.reduls.igo.bin.BuildDic"
-//             classpath = files(jar.absolutePath)
-//             args = [
-//                 compiled_dict,
-//                 new File("$buildDir/igo/mecab-ipadic-2.7.0-20070801"),
-//                 "EUC-JP"
-//             ]
-//         }
-//     }
-
-//     return files(jar.absolutePath)
-// }
-
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -182,14 +152,4 @@ dependencies {
     implementation 'androidx.palette:palette:1.0.0'
     implementation "com.github.krottv:compose-sliders:0.1.4"
     implementation "org.burnoutcrew.composereorderable:reorderable:0.9.2"
-
-    // Ptl
-    implementation files("../../ptl/lib/build/libs/ptl.jar")
-    implementation 'org.jsoup:jsoup:1.15.3'
-
-//    implementation 'org.seleniumhq.selenium:selenium-java:2.41.0'
-//    implementation 'com.github.bonigarcia:webdrivermanager:webdrivermanager-5.3.0'
-
-    // implementation igo()
-    // implementation 'com.github.spectreseven1138:android-compose-furigana:1.0.0'
 }
