Begin implementing language options

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,7 +103,7 @@ android {
 
     sourceSets {
         main {
-            assets.srcDirs = ['build/igo/assets/']
+            assets.srcDirs = ['src/main/assets']
         }
     }
 }
