--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -32,6 +32,7 @@ jobs:
       with:
         prerelease: true
         generate_release_notes: true
+        tag_name: latest-build
         files: |
           app/build/outputs/apk/debug/app-universal-debug.apk
           app/build/outputs/apk/debug/app-arm64-v8a-debug.apk
