--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,18 +4,17 @@ plugins {
     id 'com.chaquo.python'
 }
 
-tasks.register("get-python-spectre7") {
-  doFirst {
-    exec {
+android {
+    task getDependencies(type: Exec, description: "Get project dependencies") {
         git clone https://github.com/spectreseven1138/python-spectre7
         mv python-spectre7/spectre7 ../server
         rm -rf python-spectre7
     }
-  }
-}
 
-android {
-    project.tasks.preBuild.dependsOn("get-python-spectre7") 
+    tasks.withType(JavaCompile) {
+        compileTask -> compileTask.dependsOn getDependencies
+    }
+
     signingConfigs {
         debug {
             storeFile file("debug.keystore")
