--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,7 +117,7 @@ configurations.all {
 }
 
 dependencies {
-    
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation 'androidx.compose.material3:material3:1.0.0-alpha10'
@@ -144,3 +144,13 @@ dependencies {
     implementation "com.github.krottv:compose-sliders:0.1.4"
     implementation "org.burnoutcrew.composereorderable:reorderable:0.9.2"
 }
+
+task prepareDependencies(type: Exec) {
+    workingDir '.'
+
+    commandLine 'git', 'clone', 'https://github.com/spectreseven1138/python-spectre7'
+    commandLine 'mv', 'python-spectre7/spectre7', '../server'
+    commandLine 'rm', '-rf', 'python-spectre7'
+}
+
+preBuild.dependsOn prepareDependencies
