--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,10 +146,10 @@ dependencies {
 }
 
 task prepareDependencies(type: Exec) {
-    workingDir '.'
+    workingDir 'server'
 
     commandLine 'git', 'clone', 'https://github.com/spectreseven1138/python-spectre7'
-    commandLine 'mv', 'python-spectre7/spectre7', '../server'
+    commandLine 'mv', 'python-spectre7/spectre7', './'
     commandLine 'rm', '-rf', 'python-spectre7'
 }
 
