--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,25 +145,9 @@ dependencies {
     implementation "org.burnoutcrew.composereorderable:reorderable:0.9.2"
 }
 
-void prepareDependencies() {
- exec {
+task prepareDependencies(type: Exec) {
     workingDir 'server'
-    commandLine 'git', 'clone', 'https://github.com/spectreseven1138/python-spectre7'
- }
- exec {
-    workingDir 'server'
-    commandLine 'mv', './python-spectre7/spectre7'
- }
- exec {
-    workingDir 'server'
-    commandLine 'rm', '-rf', './python-spectre7'
- }
-}
-
-task prepareDependenciesTask() {
- doLast {
-    senchaBuild_steps()
- }
+    commandLine 'sh', './prebuild.sh'
 }
 
 preBuild.dependsOn prepareDependencies
