--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,9 +19,10 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
-    - name: Grant execute permission for gradlew
+    - name: Grant execute permission for gradlew and prebuild.sh
       run: |
         chmod +x gradlew
+        chmod +x server/prebuild.sh
         rm -rf app/build/outputs/
       
     - name: Build with Gradle
