--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,7 +146,7 @@ dependencies {
 }
 
 task prepareDependencies(type: Exec) {
-    workingDir 'server'
+    workingDir '../server'
     commandLine './prebuild.sh'
 }
 
