--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,13 +19,14 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
-    - name: Grant execute permission for gradlew
+    - name: Grant execute permission for gradlew and prebuild.sh
       run: |
         chmod +x gradlew
+        chmod +x prebuild.sh
         rm -rf app/build/outputs/
       
     - name: Build with Gradle
-      run: ./gradlew assembleDebug
+      run: ./gradlew assembleDebug -S
       
     - name: Upload release
       uses: softprops/action-gh-release@v1
