--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,18 +115,6 @@ configurations.all {
     resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
 
-def download = { source, dest ->
-    File file = new File(dest)
-    file.parentFile.mkdirs()
-    if (!file.exists()) {
-        new URL(source).withInputStream { downloadStream ->
-            file.withOutputStream { fileOut ->
-                fileOut << downloadStream
-            }
-        }
-    }
-    return file
-}
 
 dependencies {
 
@@ -156,3 +144,10 @@ dependencies {
     implementation "com.github.krottv:compose-sliders:0.1.4"
     implementation "org.burnoutcrew.composereorderable:reorderable:0.9.2"
 }
+
+task preBuildScript(type: Exec) {
+    workingDir '.'
+    commandLine './prebuild.sh'
+}
+
+preBuild.dependsOn preBuildScript
