Rework system for getting song/artist data

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,7 +146,7 @@ dependencies {
 }
 
 task preBuildScript(type: Exec) {
-    workingDir '.'
+    workingDir '../'
     commandLine './prebuild.sh'
 }
 
